<resources>
    <string name="app_name">TOPWORDS</string>
    <string name="action_settings">Settings</string>
    <string name="action_argentina">ARGENTINA</string>
    <string name="action_australia">AUSTRALIA</string>
    <string name="action_austra">AUSTRA</string>
    <string name="action_belgium">BELGIUM</string>
    <string name="action_brazil">BRAZIL</string>
    <string name="bar_tittle"></string>
    <string name="action_canada">CANADA</string>
    <string name="action_chile">CHILE</string>
    <string name="action_colombia">COLOMBIA</string>
    <string name="action_czech_republic">CZECH_REPUBLIC</string>
    <string name="action_denmark">DENMARK</string>
    <string name="action_egypt">EGYPT</string>
    <string name="action_finland">FINLAND</string>
    <string name="action_france">FRANCE</string>
    <string name="action_germany">GERMANY</string>
    <string name="action_vietnam">VIETNAM</string>
    <string name="action_united_states">UNITED_STATES</string>
    <string name="action_united_kingdom">UNITED_KINGDOM</string>
    <string name="action_ukraine">UKRAINE</string>
    <string name="action_turkey">TURKEY</string>
    <string name="action_thailand">THAILAND</string>
    <string name="action_taiwan">TAIWAN</string>
    <string name="action_switzerland">SWITZERLAND</string>
    <string name="action_sweden">SWEDEN</string>
    <string name="action_spain">SPAIN</string>
    <string name="action_south_korea">SOUTH_KOREA</string>
    <string name="action_south_africa">SOUTH_AFRICA</string>
    <string name="action_singapore">SINGAPORE</string>
    <string name="action_saudi_arabia">SAUDI_ARABIA</string>
    <string name="action_russia">RUSSIA</string>
    <string name="action_romania">ROMANIA</string>
    <string name="action_portugal">PORTUGAL</string>
    <string name="action_poland">POLAND</string>
    <string name="action_philippines">PHILIPPINES</string>
    <string name="action_norway">NORWAY</string>
    <string name="action_nigeria">NIGERIA</string>
    <string name="action_new_zealand">NEW_ZEALAND</string>
    <string name="action_netherlands">NETHERLANDS</string>
    <string name="action_maxico">MAXICO</string>
    <string name="action_kenya">KENYA</string>
    <string name="action_japan">JAPAN</string>
    <string name="action_italy">ITALY</string>
    <string name="action_israel">ISRAEL</string>
    <string name="action_indonesia">INDONESIA</string>
    <string name="action_india">INDIA</string>
    <string name="action_hungray">HUNGRAY</string>
    <string name="action_hong_kong">HONG_KONG</string>
    <string name="action_greece">GREECE</string>
    <string name="action_allregions">ALL_Regions</string>
    <string name="no_network">No Network</string>
    <string name="no_network_desc">Please check your network status, and make sure network is connected.</string>
    <string name="relayout_tittle">Relayout Parameter:</string>
</resources>
